--- a/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
+++ b/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
@@ -21,15 +21,17 @@
         .ToList();
     }
             
-    <header>
-        <div class="container d-flex flex-row justify-content-between flex-lg-wrap">
-            <div class="row">
+    <header class="m-2">
+        <div class="container-fluid m-3 d-flex flex-row justify-content-between flex-lg-wrap">
+            <div class="row ml-2">
                 <form asp-controller="Home" asp-action="SetLanguage" style="margin-top:20px;"
                       asp-route-returnUrl="@Context.Request.Path"
                       method="post" class="form-horizontal">
-                    Language: <select name="culture" onchange="this.form.submit();"
+                    <div>Language:</div>
+                    <select name="culture" onchange="this.form.submit();"
                                       asp-for="@requestCulture.RequestCulture.UICulture.Name"
-                                      asp-items="cultureItems"></select>
+                                      asp-items="cultureItems">
+                                  </select>
                 </form>
             </div>
             <div class="text-right">
@@ -57,8 +59,9 @@
                 </ul>
             </div>
         </div>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3">
+            <div class="container-fluid">
 
                 <a class="navbar-brand text" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Header"]</a>
                 
@@ -83,7 +86,7 @@
                         {
                             <li class="nav-item">
 
-                                <a class="btn btn-outline-dark m-1" href="http://palamil3.beget.tech/">@Localizer["navDeveloper"]</a>
+                                <a class="btn btn-outline-dark m-1" href="http://w44766vr.beget.tech/">@Localizer["navDeveloper"]</a>
                     
                             </li>
 
@@ -106,10 +109,18 @@
                             </li>
 
                             <li class="nav-item">
-
-                                <a class="btn btn-outline-dark m-1" asp-area="" asp-controller="Lesson" asp-action="">@Localizer["StatisticInfo"]</a>
-
-                            </li>
+                                <div class="dropdown">
+                                    <button class="btn btn-outline-dark" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        @Localizer["User'sPage"]
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item" asp-controller="Lesson" asp-action="UserProgres">@Localizer["UserProgress"]</a>
+                                        <a class="dropdown-item" asp-controller="Lesson" asp-action="StatisticInfo">@Localizer["StatisticInfo"]</a>
+                                        <a class="dropdown-item" href="/Identity/Account/Manage">@Localizer["YourAccount"]</a>
+                                        
+                                    </div>
+                                </div>
+                            </li>                          
                         }
                     </ul>
                 </div>
