--- a/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
+++ b/EnglishWebSimulatorApp/Views/Shared/_Layout.cshtml
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - EnglishWebSimulatorApp</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
@@ -48,7 +50,7 @@
                                     string imageBase64Data = Convert.ToBase64String(pict.Pict);
                                     string imageDataURL = string.Format("data:image/png;base64,{0}", imageBase64Data);
                                     pictImg = imageDataURL;
-                                        <img src="@pictImg" class="rounded-circle mr-1" width="25">
+                                        <img src="@pictImg" class="rounded-circle mr-1" style="width:35px; height:35px;">
                                     }            
                                 }
                                 @if(!String.IsNullOrEmpty(pict.NameImg))
@@ -79,7 +81,9 @@
             </div>
         </div>
 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3"
+        style="width:100%; position:absolute; z-index:50;"
+        >
             <div class="container-fluid">
 
                 <a class="navbar-brand text" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Header"]</a>
@@ -148,7 +152,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 pt-5">
             @RenderBody()
         </main>
     </div>
