--- a/EnglishWebSimulatorApp/wwwroot/css/site.css
+++ b/EnglishWebSimulatorApp/wwwroot/css/site.css
@@ -1,6 +1,13 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,700;1,700&family=Roboto:wght@100&display=swap');
+
+.textFont1{
+    font-family: 'Comic Neue', cursive;
+}
+
 nav {
     height: 7.5vh;
 }
@@ -99,3 +106,53 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+.backgrImg {
+  background-image:url('../img/YT BANNER.png');
+}
+
+/*страница вывода победителей*/
+.header_img {
+    padding-top: 10px;
+    background-image: url('../img/1619312722_6-phonoteka_org-p-fon-pobediteli-konkursa-8.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
+
+.winners-case {
+    height: 650px;
+    background-color:aqua;
+    opacity:0.9;
+}
+
+.card-style {
+    border: 2px solid black;
+    border-radius: 20px;
+    box-shadow: 10px 5px 5px gray;
+    max-width: 200px;
+}
+
+.card_head {
+    background-image: url('https://i.imgur.com/Qtrsrk5.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.horizontal-scroll-wrapper {
+    width: 100px;
+    height: 300px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transform: rotate(-90deg);
+    transform-origin: right top;
+}
+
+
+.horizontal-scroll-wrapper > div {
+        width: 100px;
+        height: 300px;
+        transform: rotate(90deg);
+        transform-origin: right top;
+}
+
+
