--- a/EnglishWebSimulatorApp/Views/Lesson/StatisticInfo.cshtml
+++ b/EnglishWebSimulatorApp/Views/Lesson/StatisticInfo.cshtml
@@ -1,13 +1,13 @@
 ﻿@model List<UserRezultParam>
 
-
 <div class="header_img">
     <div class="container-fluid" >
         <div class="row table-responsive-sm">
+
             <div class="col-8">
-                <div class="row" style="height:70%;">
-                    <div class="col align-self-start">
-                        <div class="card card-style">
+                <div class="row row-style">
+                    <div class="col align-self-start col-style">
+                        <div class="card card-style m-2">
                             <div class="text-center">
                                 <h3>1 место</h3>
                             </div>
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                     <div class="col align-self-center">
-                         <div class="card card-style">
+                        <div class="card card-style m-2">
                             <div class="text-center">
                                 <h3>2 место</h3>
                             </div>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="col align-self-end">
-                        <div class="card card-style">
+                        <div class="card card-style m-2">
                             <div class="text-center">
                                 <h3>3 место</h3>
                             </div>
@@ -175,18 +175,20 @@
                         </div>
                     </div>
                 </div>
+        <!--
                 <div class="container">
-                    <div class="horizontal-scroll-wrapper squares">
-                        @foreach(var i in Model)
-                        {
-                            <div>@i.Email</div>
-                        }
-                        
-                    </div>
-                </div>
+                                    <div class="horizontal-scroll-wrapper squares">
+                @foreach (var i in Model)
+                {
+                                                <div>@i.Email</div>
+                }
+                                    </div>
+                                </div>
+        -->             
             </div>
+
             <div class="col p-0" >
-                <div class="col m-0" style="height:500px; background-color: rgba(50, 90, 50, 0.4)">
+                <div class="col m-0" style="background-color: rgba(50, 90, 50, 0.4)">
                     <div class="textFont1" style="color:white; font-weight:bold;"><h4>@Localizer["String1"] @ViewBag.Place @Localizer["String2"].</h4></div>
                     <div class="text-center d-flex justify-content-center align-items-center" >
                         <div class="card card-style">
@@ -248,9 +250,7 @@
                             </div>
                         </div>
                     </div>
-
-                </div>
-                
+                </div>               
             </div>
         </div>
     </div>    
